# Kata-Game-of-Life

./: .gitignore  CMakeLists.txt  Kata-Game-of-Life.sln  README.md
Kata-Game-of-Life/: About.cpp  Kata-Game-of-Life.cpp  Kata-Game-of-Life.h  Kata-Game-of-Life.vcxproj  Kata-Game-of-Life.vcxproj.filters  Windows_Infrastructure.cpp  __CELL.cpp  __CELL.h  __Table.cpp  __Table.h  __Utilities.h  __WINDOW.h  framework.h
src/: CELL.cpp  CELL.h  CMakeLists.txt  Cell.ixx  Kata-Game-of-Life.cpp  Kata-Game-of-Life.h  Kata-Game-of-Life.rc  Resource.h  Table.cpp  Table.h  Table.ixx  Utilities.h  Utilities.ixx  WINDOW.h  Window-Input-Mapping.cpp  Window-Utilities.ixx  Windows_Infrastructure.cpp  __CELL.h  __Utilities.h  __WINDOW.h
